Wrap text for pins, fixed additional save issue with pins

--- a/app/ui/style/pin-sidebar.less
+++ b/app/ui/style/pin-sidebar.less
@@ -44,7 +44,11 @@
   StoryPin Overlay Style.
   // TODO: Move this to pin app styles.
  */
+/*
+  The values for padding and border are taken into account in pinSvc.js in insertNewOverlayIntoDOMForPin
+ */
 .storypin-overlay {
+  overflow-y: auto;
   border: 1px solid lightgrey;
   padding: 0.45em;
   border-radius: 12px;
